css/styles.css
html {
margin: 0; 
padding: 0;
border-top: #60C04D solid 8px;
background: #fff url('http://i.stack.imgur.com/EL4Cz.png') repeat scroll left top;
}

h1, h2, h3, h4, h5 {
padding: 0; 
margin: 0;
font-family:"league-gothic-1","league-gothic-2", Impact, helvetica;
text-decoration: none;
text-transform: uppercase;
-webkit-font-smoothing: antialiased;
}
		
	/*Description*/ 
	h5 {
	font-family: "p22-underground-1","p22-underground-2", century gothic, futura;
	text-transform: uppercase;
	font-size: 9px;
	letter-spacing: 1px;
	font-weight: normal;
	font-size: 14px;
	margin-top: 3px;
	color: #333;
	}
	

p { 
font-size: 14px; 
line-height: 21px;
font-family: "ff-tisa-web-pro-1","ff-tisa-web-pro-2", Georgia, Times; 
font-weight: normal;
text-rendering: optimizeLegibility;
-webkit-font-smoothing: antialiased;
}

a {
text-decoration: none;
color: #000;
padding: 0;
margin: 0;
cursor:pointer;
}
	
	p a { 
	color: #000;
	opacity: 1;
	}

	p a:hover { 
	opacity: .7;
	-webkit-transition: .5s;
	-moz-transition: .5s;
	}

ul{
list-style-type: none;
padding: 0;
margin: 0;
text-align: center;
}

img {
border: none;
width: 115px;
height: 115px;
}

#content {
display: block;
margin-left: 50px;
position: absolute;
}

	#content a {
	color: #60C04D;} 


/*Header*/

#container {
padding-left: 10%;
width: 90%;
margin: 60px auto 0 auto;
}

#nametag {
position: relative; 
z-index: 1000;
margin: 50px 0 20px 50px;
width: 400px;
cursor: pointer;
}

	#nametag:hover {
	-webkit-transform: translate(0,10px);
	-webkit-transition: -webkit-transform .3s;
	-moz-transition: .3s;
	cursor: pointer;
	-webkit-backface-visibility: hidden;
	}
	
		#nametag img { 
		float: left;
		margin-right: 20px; 
		cursor: pointer;
		box-shadow: 1px 1px 0 4px #60C04D;

		border-radius: 50%;
		-webkit-border-radius: 50%;
		-moz-border-radius: 50%;
		}
		
		h1 {
		color: #333;
		font-size: 28px;
		font-weight: normal;
		letter-spacing: 1px;
		padding-top: 30px;
		}
		
		#blurb {
		color: #333;
		font-size: 10px;
		font-family: "p22-underground-1","p22-underground-2", century gothic, helvetica;
		text-transform: uppercase;
		margin-top: 1px;
		letter-spacing: 1px;
		}

#header {
height: 120px;
padding-top: 100px;
}

	h2 {
	font-size: 85px;
	line-height: 26px;
	letter-spacing: 1px;
	font-weight: 100;
	color: #333;
	text-shadow: #bbb 2px 2px 6px;
	}


#menu {
position: absolute;
left: 50%; 
top: 424px;
height: 300px;
margin-left: 420px;
z-index: 1000;
}

	h3 {
	font-family: "p22-underground-1","p22-underground-2", century gothic, helvetica;
	font-size: 13px;
	font-weight: normal;
	padding-top: 10px;
	letter-spacing: 1px;
	}
	
	#menu li {
	color: #333;
	background: #60C04D;
	width: 135px;
	height: 33px;
	margin-bottom: 15px;
	display: block;
	-webkit-box-shadow: 1px 1px 4px #888;
	opacity: .8;
		-transition: .3s;
		-webkit-transition: .3s;
		-moz-transition: .3s;
	}

		#menu h3:hover {
		opacity: 1;
		}
		
		#menu li:hover {opacity: 1;}
		
	li#backtotop {
	color: #fff;
	display: none;
	width: 130px; 
	height: 33px;
	position: relative;
	}
	
	.back {
	font-size: 13px;
	padding-top: 10px;}
	
.clear {
height:50px;
width: 100%;
margin:0;
overflow:hidden;
clear: both;
}

/*Footer*/

#footer {
bottom:-50%;
position: absolute;
margin-left: -1%;
width: 101%;
height: 35%;
background: #60C04D;
text-align: center;
padding: 20px 0 0 0;
border-bottom: #404040 solid 8px;
border-top: #aaa solid 1px;
	transition: .3s;
	-webkit-transition: .3s;
	-moz-transition: .3s;
box-shadow: 0px 0px 20px #888;
}

#menu-wrapper { 
margin: 0 auto;
height: 200px; 
width: 1200px;
}

	h4 {
	font-size: 40px;
	font-weight: 500;
	letter-spacing: 2px;
	color: #404040;
	text-shadow: #fff 0px 1px 2px;
	margin-bottom: 10px;
	-webkit-transition: .3s;
	-moz-transition: .3s;
	}

	.footermenus {
	width: 330px;
	float: left;
	text-align: left;
	}
	
	#more li, #music li, #inspiration li {
	display:block;
	font-family: "p22-underground-1","p22-underground-2", century gothic, futura;
	text-transform: uppercase;
	width: 320px;
	margin-bottom: 10px;
	font-size: 12px;
	letter-spacing: 1px;
	margin-left: 75px;
	}
	
		#more a, #music a, #inspiration a {
		color: #404040;
		}
		
		#more li a:hover, #music li a:hover, #inspiration li a:hover {
		opacity: .6;
		-webkit-transition: 0.5s;
		-moz-transition: 0.5s;
		}

/*Resume*/

#resumepdf p {
float: left;
font-family: "league-gothic-1","league-gothic-2", Impact;
font-size: 32px;
text-transform: uppercase;
letter-spacing: 1px;
color: #60C04D;
margin: 24px 0 0 10px;
font-weight: normal;
text-shadow: #666 0px 1px 1px;
}

	#resumepdf img {
	float: left;
	}
	
	#resumepdf:hover {
	-webkit-transform: translate(0,10px);
	-webkit-transition: .3s;
	-moz-transition: .3s;
	}
	
#left {
clear: both;
float: left; 
width: 385px;
margin-right: 80px;
}
#left #mini {
	margin-left: 50%;
}
#left #mini img {
	height: 64px;
	width: 64px;
}
#right {
float: left;
}
#right #mini {
	margin-right: 50%;
}
#right #mini img {
	height: 64px;
	width: 64px;
}
#right #mini p {
	margin-left: -30px;
}
#left #mini p {
	margin-left: -10px;
}
#contact #left {
	margin-top: 30%
}
#contact #right {
	margin-top: 30%
}
	.resume { 
	margin:50px 0 40px 0;
	}

	.company {
	color: #404040;
	text-transform: uppercase;
	font-weight: normal;
	font-size: 25px;
	letter-spacing: 1px;
	margin-bottom: 8px;
	font-family: "league-gothic-1","league-gothic-2", Impact;
	}
	
		.location {
		font-family:"p22-underground-1","p22-underground-2", century gothic, futura;
		font-size: 10px;
		text-transform: uppercase; 
		letter-spacing: 1px;
		color: #444;
		}
		
		.position { 
		font-style: italic;
		margin: 16px 0;
		}
		
		.detail { 
		font-size: 14px; 
		margin: 10px 0 38px 0;
		line-height: 20px;
		color: #444;
		}
	
	.award {
	color: #404040;
	text-transform: uppercase;
	font-weight: normal;
	font-size: 21px;
	letter-spacing: 1px;
	margin-bottom: 7px;
	font-family: "league-gothic-1","league-gothic-2", Impact;
	}
		
		.detail2 {
		font-size: 14px;
		margin: 0 0 20px 0;
		color: #444;
		}
		
		.skills { 
		font-size: 13px;
		margin-top: -10px;
		color: #444;
		}

.panel{
	position: absolute;
	opacity: 0;
	z-index:2;
	-webkit-transition: opacity .6s ease-in-out;
	-moz-transition: opacity .6s ease-in-out;
	-o-transition: opacity .6s ease-in-out;
	-ms-transition: opacity .6s ease-in-out;
	transition: opacity .6s ease-in-out;
}
.panel:target{
	opacity: 1;
}

#about:target ~ #header #menu #link-about,
#home:target ~ #header #menu #link-home,
#projects:target ~ #header #menu #link-projects,
#contact:target ~ #header #menu #link-contact{
	background: #000;
	color: #fff;
}

.face img {
	box-shadow: 0px 0px 0 8px #60C04D;
	background: rgba(0,255,255, 0.5);  
	width: 400px;
	height: 400px;
	border-radius: 200px;
	-webkit-border-radius: 200px;
	-moz-border-radius: 200px;
}

